<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/darkcolor"
    android:layout_height="match_parent">


    <TextView

        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_light"
        android:padding="16dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="14dp" />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/tv_note"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/darkcolor"
            app:cardCornerRadius="80dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gotham_regular"
                android:text="0"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <com.vaibhavlakhera.circularprogressview.CircularProgressView
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:animate="true"
            app:fillColor="@android:color/transparent"
            app:progressColor="@android:color/white"
            app:progressRoundCap="true"
            app:progressTextColor="@color/bgColor"
            app:progressTextEnabled="false"
            app:progressTextSize="32sp"
            app:progressTextType="progress"
            app:progressValue="0"
            app:progressWidth="12dp"
            app:startAngle="270"
            app:totalColor="#ff7899"
            app:totalValue="10"
            app:totalWidth="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progressLayout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/progressView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/seperate_view"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/smart"
                        android:gravity="center"
                        android:text="-"

                        android:textColor="@color/decoColor1"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gotham_regular"
                        android:gravity="center"
                        android:text="@string/first"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/seperate_view"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#c9cad3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/seperate_view"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_last"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/smart"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="@color/decoColor2"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gotham_regular"
                        android:gravity="center"
                        android:text="@string/last"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_regular"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/start"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/control_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:visibility="invisible">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_refresh"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:layout_toLeftOf="@+id/btn_kick"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="?attr/colorPrimary"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_refresh" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_kick"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="?attr/colorPrimary"
                    app:cardCornerRadius="35dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_foot" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_done"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/btn_kick"
                    android:clickable="true"

                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="?attr/colorPrimary"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_tick" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
